service/tests/tests/authentication/snapshots/integration_tests__tests__authentication__register__register_duplicate_username-body.snap
---
source: tests/tests/authentication/register.rs
expression: response.to_json().unwrap()
---
{
  "status": 422,
  "title": "The username is already registered",
  "type": "tag:multiverse,2020:users/problems/duplicate_username"
}
