service/tests/tests/authentication/snapshots/integration_tests__tests__authentication__register__register_success-body.snap
---
source: tests/tests/authentication/register.rs
expression: response.to_json().unwrap()
---
{
  "token": {
    "token": "[access_token]",
    "valid_until": "[access_token_expiry]"
  },
  "user": {
    "display_name": "display_name",
    "email_address": "test@example.com",
    "username": "username"
  }
}
