service/tests/tests/authentication/snapshots/integration_tests__tests__authentication__register__register_success-headers.snap
---
source: tests/tests/authentication/register.rs
expression: response.headers()
---
"HTTP/1.1 200 OK\nContent-Type: application/json\nServer: Rocket"
