service/tests/tests/authentication/snapshots/integration_tests__tests__authentication__register__register_validation_failure-all_whitespace-headers.snap
---
source: tests/tests/authentication/register.rs
expression: response.headers()
---
"HTTP/1.1 422 Unprocessable Entity\nContent-Type: application/problem+json\nServer: Rocket"
