service/tests/tests/authentication/snapshots/integration_tests__tests__authentication__register__register_validation_failure-no_password-body.snap
---
source: tests/tests/authentication/register.rs
expression: response.to_json().unwrap()
---
{
  "fields": {
    "password": {
      "title": "The required field was missing",
      "type": "tag:multiverse,2020:problems/validation_error/missing"
    }
  },
  "status": 422,
  "title": "A validation error occurred",
  "type": "tag:multiverse,2020:problems/validation_error"
}
